fixed white space right

--- a/style1.css
+++ b/style1.css
@@ -29,7 +29,7 @@ footer {
 	text-align: center;
 	letter-spacing: 1.6px;
 
-	padding: 15px 5px 15px 5px;
+	padding: 100px 5px 15px 5px;
 	/*background-color: #f8f8f8;*/
 }
 
@@ -97,26 +97,27 @@ a:hover {
 	animation-timing-function: ease-in;
 }
 
+
 #title1 {
 	margin: 30px 0 0 0;
-	animation: type 10s steps(100, end); 
-	animation-timing-function: ease-in;
+	width: 100%;
+	animation: type 8s steps(100, end); 
+	animation-timing-function: ease;
+	white-space: nowrap;
+	overflow: hidden;
 }
 
-#title2 {
+/*#title2 {
 	animation: type 10s steps(100, end);
 	animation-timing-function: ease-in; 
-}
+}*/
 
-#title2, h1 {
-	/*visibility: hidden;*/
+h1 {
 	letter-spacing: 1.7;
 	font-size: 60px;
 	font-weight: 100;
 	color: #E65100;
-	white-space: nowrap;
-	overflow: hidden;
-	width: 30em;
+	width: 100%;
 }
 
 @keyframes type {
@@ -229,8 +230,8 @@ button:hover {
 
 #travel_container {
 	margin: auto;
-	width: 90%;
 	max-width: 800px;
+	width: 90%;
 }
 
 div.gallery {
